# pyquasoare

./: .coveragerc  .gitignore  CITATION.cff  README.md  env_pyquasoare.yml  pyproject.toml  setup.cfg  setup.py
.azure_devops/: azure-pipelines.yml  azure-pipelines_mac.yml  azure-pipelines_win.yml
.github/workflows/: python-package-conda.yml
data/: sites.csv
examples/: example.c  example_gr4j.py  example_run_unix.sh  example_run_windows.bat  run_all_examples.py
examples/gr4j/: example_gr4j_production.py
examples/quadroute/: compile_unix.sh  compile_windows.bat  example_quadroute.c
examples/verification_of_analytical_solution/: verification_of_analytical_solution.py
examples/vicmod/: compile_unix.sh  compile_windows.bat  compile_windows.sh  example_vicmod.c  example_vicmod.py
scripts/: Q01_run_models.py  catchment_stats.py  data_utils.py  example.c  example_run_windows.bat  figure_A_approx_scheme.py  figure_B_and_C_simulations.py  figure_D_performance_plot.py  figure_E_performance_analysis.py  figure_F_benchmark_model_functions.py  hdf5_utils.py  io_hdf5.py  models_plot.py  models_run.py  performance_compute.py  performance_plot.py
scripts/quasoare_paper_2024/: data_utils.py  figure_A_approx_scheme.py  figure_B_and_C_simulations.py  figure_D_performance_plot.py  hdf5_utils.py  (+8 more)
tests/: conftest.py  data_reader.py  streamflow_423202_423206_event.csv  test_approx.py  test_benchmarks.py  test_data_interception.csv  test_integrate.py  test_integrate_reservoirs_equations.py  test_model.py  test_models.py  test_optimize.py  test_rezeq.py  test_steady.py
(+59 files in other folders)
