[build-system]
requires = [
    "setuptools >= 64",
    "cython >= 3.0.10",
    "numpy >= 1.20.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyquasoare"
version = "1.1"
authors = [{name = "Julien Lerat, CSIRO Environment", email="julien.lerat@csiro.au"}]
description = "Solve the approximate reservoir equation using the QuaSoARe method"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["differential equation", "reservoir", "dynamic system", "store", "routing", "rainfall-runoff", "hydrology"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python 3",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Hydrology"
]    
requires-python = ">= 3.8"
dependencies = [
    "hydrodiy",
    "numpy >= 1.20.0",
    "scipy >= 1.0.0",
    "pandas >= 2.0.0"
]

[project.urls]
Homepage = "https://github.com/csiro-hydroinformatics/pyquasoare"
Repository = "https://github.com/csiro-hydroinformatics/pyquasoare"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.setuptools.packages.find]
where = ["src"]
